setup test-env-example

--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
   <title>Jasmine Spec Runner</title>
 
   <link rel="shortcut icon" type="image/png" href="/assets/jasmine/favicon.png">
-
   <link rel="stylesheet" type="text/css" href="/assets/jasmine/jasmine.css">
 
   <script type="text/javascript" src="/assets/bpm_libs.js"></script>
-  <script type="text/javascript" src="/assets/jasmine/jasmine.js"></script>
-  <script type="text/javascript" src="/assets/jasmine/jasmine-html.js"></script>
+  <script type="text/javascript" src="/assets/bpm_test_libs.js"></script>
 
   <script type="text/javascript">
     var packages = location.search.match(/package=([^&]+)&?/), packageName,
